--- a/css/myresume.css
+++ b/css/myresume.css
@@ -1,7 +1,7 @@
 ﻿@ import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 
 body {
-	font-family: "Noto Sans", "Noto Sans TC";
+	font-family: "Noto Sans", "Noto Sans TC", "MingLiU";
 }
 
 h1 {
