--- a/css/myresume.css
+++ b/css/myresume.css
@@ -1,13 +1,20 @@
 ﻿@ import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 
 body {
-	font-family: "Noto Sans", "Noto Sans TC", "MingLiU";
+	font-family: "MingLiU","Noto Sans", "Noto Sans TC";
+	font-family: "MingLiU","arial","helvetica","sans-fantasy";
 }
 
 h1 {
 	font-family: inherit;
 	text-transform: none;
 	line-height: 6rem;
+}
+h2 {
+	font-family: inherit;
+}
+h3 {
+	font-family: inherit;
 }
 
 .subheading {
